# omi

./: .gitignore  MIT-LICENSE.txt  README.md  example.omi  pyproject.toml  shell.py
docs/: Architecture.md  Documentation.md  Modules.md
src/: arrow.py  position.py  preprocessor.py
src/error/: error.py
src/error/message/: expectedchar.py  illegalchar.py  invalidsyntax.py  rt.py
src/linter/: __init__.py  config.py  context.py  fixer.py  report.py  rule.py  runner.py
src/main/: interpret.py  lexer.py
src/main/interpreter/: control_flow.py  core.py  functions_async.py  modules_directives.py  testing.py
src/main/parser/: base.py  control.py  expressions_statements.py  helpers.py  parser.py  testing.py  types.py
src/nodes/: block.py  shell.py
src/nodes/control/: asyncgroup.py  flow.py
src/nodes/directives/: setN.py  typealiasN.py  useN.py
src/nodes/function/: awaitN.py  call.py  funcdef.py
src/nodes/imports/: importN.py  moduleaccess.py
src/nodes/loops/: forN.py
src/nodes/ops/: nullcoal.py  ternaryop.py
src/nodes/testing/: expect.py  hook.py  suite.py  testcase.py
src/nodes/types/: dict.py  enumdef.py  fstring.py  subscript.py  (+2 more)
src/run/: async_runtime.py  context.py  run.py  runtime.py  source.py  test_runner.py  typecheck.py
src/stdlib/: color.py  files.py  http.py  json.py  log.py  math.py  paths.py  python.py  regex.py  string.py  system.py  time.py  txt.py
src/values/: async_group.py  convert.py  future.py  value.py
src/var/: ansi.py  builtin.py  constant.py  flags.py  keyword.py  lint.py  parser.py  token.py  type_system.py
(+16 files in other folders)
