[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omilang"
version = "1.5.1"
description = "Omi interpreted programming language"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Qualsu" }
]
keywords = ["omi", "language", "interpreter", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console"
]

[project.urls]
Homepage = "https://github.com/OmiLang/Omi"
Repository = "https://github.com/OmiLang/Omi"
Documentation = "https://github.com/OmiLang/docs"

[project.scripts]
omi = "shell:main"

[tool.setuptools]
py-modules = ["shell"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*"]
